release: v1.0.0 大版本 — 中间服务层补全 + 支付主链路风控合规关卡
四个骨架模块补全为真实实现：
- settlement: 复式记账账本 / 对账比对 / 资金归集 / 风控规则真实逻辑
- compliance: KYC 受理审核 / AML 名单筛查 / DID+VC / 信誉评分
- analytics: 交易图谱 / 监控告警 / 统计 / 用户分群 / 数据导出
- oracle: 多源价格聚合 / 链上治理 / 国库 / 可验证随机数

支付主链路接入关卡：发起支付风控、确认支付 AML、退款风控、编排风控
修复：JUnit5 平台缺失、bootJar 库消费、缺失建表迁移、规则链装配

版本统一升级至 1.0.0；全量回归 174 测试通过